--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Royaume des Dragées Royal Experience</title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Playfair+Display:wght@600;700;800&display=swap" rel="stylesheet" />
+
+    <title>Royaume des Dragées - Boutique de célébrations en Tunisie</title>
+    <meta name="description" content="Royaume des Dragées : boutique de célébrations en Tunisie. Dragées, accessoires, et créations raffinées pour naissance, mariage, graduation et événements." />
+    <meta name="robots" content="index,follow" />
+    <link rel="canonical" href="https://royaumedesdragees.tn/" />
+
+    <meta property="og:title" content="Royaume des Dragées" />
+    <meta property="og:description" content="Une expérience raffinée pour vos plus beaux moments en Tunisie." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://royaumedesdragees.tn/" />
+    <meta property="og:image" content="/assets/logo.jpg" />
+
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
+    <meta name="twitter:title" content="Royaume des Dragées" />
+    <meta name="twitter:description" content="Une expérience raffinée pour vos plus beaux moments en Tunisie." />
+    <meta name="twitter:image" content="/assets/logo.jpg" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Royaume des Dragées",
+        "address": {
+          "@type": "PostalAddress",
+          "addressCountry": "TN",
+          "addressLocality": "Tunis"
+        },
+        "url": "https://royaumedesdragees.tn/"
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
